--- a/readme.org
+++ b/readme.org
@@ -130,10 +130,9 @@ The package's elisp code is tangled from [[https://codeberg.org/jao/consult-notm
 	`("notmuch" "address" "--format=text" ,input))
 
       (defun consult-notmuch-address-compose (address)
-	"Compose an email to a given address"
-	(let ((other-headers
-	 (and notmuch-always-prompt-for-sender
-	      (list (cons 'From (notmuch-mua-prompt-for-sender))))))
+	"Compose an email to a given ADDRESS."
+	(let ((other-headers (and notmuch-always-prompt-for-sender
+	                          `((From . ,(notmuch-mua-prompt-for-sender))))))
 	  (notmuch-mua-mail address
                             nil
                             other-headers
@@ -149,7 +148,7 @@ The package's elisp code is tangled from [[https://codeberg.org/jao/consult-notm
 
       ;;;###autoload
       (defun consult-notmuch-address (&optional multi-select-p initial-addr)
-	"Search through the notmuch database for an email address and compose mail to it.
+	"Search the notmuch db for an email address and compose mail to it.
       With a prefix argument, prompt multiple times until there
       is an empty input."
 	(interactive "P")
