--- a/readme.org
+++ b/readme.org
@@ -126,43 +126,42 @@ The package's elisp code is tangled from [[https://codeberg.org/jao/consult-notm
 
     #+begin_src emacs-lisp :noweb-ref public-functions
       (defun consult-notmuch--address-command (input)
-	"Spec for an async command querying a notmuch address with INPUT."
-	`("notmuch" "address" "--format=text" ,input))
+        "Spec for an async command querying a notmuch address with INPUT."
+        `("notmuch" "address" "--format=text" ,input))
 
       (defun consult-notmuch-address-compose (address)
-	"Compose an email to a given ADDRESS."
-	(let ((other-headers (and notmuch-always-prompt-for-sender
-	                          `((From . ,(notmuch-mua-prompt-for-sender))))))
-	  (notmuch-mua-mail address
+        "Compose an email to a given ADDRESS."
+        (let ((other-headers (and notmuch-always-prompt-for-sender
+                                  `((From . ,(notmuch-mua-prompt-for-sender))))))
+          (notmuch-mua-mail address
                             nil
                             other-headers
                             nil
                             (notmuch-mua-get-switch-function))))
 
       (defun consult-notmuch--address-prompt ()
-	(consult--read (consult--async-command
-			   #'consult-notmuch--address-command)
-		       :prompt "Notmuch addresses: "
-		       :sort nil
-		       :category 'notmuch-address))
+        (consult--read (consult--async-command #'consult-notmuch--address-command)
+                       :prompt "Notmuch addresses: "
+                       :sort nil
+                       :category 'notmuch-address))
 
       ;;;###autoload
       (defun consult-notmuch-address (&optional multi-select-p initial-addr)
-	"Search the notmuch db for an email address and compose mail to it.
+        "Search the notmuch db for an email address and compose mail to it.
       With a prefix argument, prompt multiple times until there
       is an empty input."
-	(interactive "P")
-	(if multi-select-p
-	    (cl-loop for addr = (consult-notmuch--address-prompt)
-		     until (eql (length addr) 0)
-		     collect addr into addrs
-		     finally (consult-notmuch-address-compose
-			      (mapconcat #'identity
-					 (if initial-addr
-					     (cons initial-addr addrs)
-					   addrs)
-					 ", ")))
-	  (consult-notmuch-address-compose (consult-notmuch--address-prompt))))
+        (interactive "P")
+        (if multi-select-p
+            (cl-loop for addr = (consult-notmuch--address-prompt)
+                     until (eql (length addr) 0)
+                     collect addr into addrs
+                     finally (consult-notmuch-address-compose
+                              (mapconcat #'identity
+                                         (if initial-addr
+                                             (cons initial-addr addrs)
+                                           addrs)
+                                         ", ")))
+          (consult-notmuch-address-compose (consult-notmuch--address-prompt))))
 
     #+end_src
 *** Buffer narrowing
