--- a/readme.org
+++ b/readme.org
@@ -394,7 +394,7 @@ The package's elisp code is tangled from [[https://codeberg.org/jao/consult-notm
                 ((string-prefix-p "header{" str)
                  (setq consult-notmuch--info t))
                 ((and str consult-notmuch--info)
-                 (when (string-match "\\(.+\\) (\\([^)]+\\)) (\\([^)]+\\))$" str)
+                 (when (string-match "\\(.+\\) (\\([^)]+\\)) (\\([^)]*\\))$" str)
                    (consult-notmuch--set :Subject (match-string 1 str))
                    (consult-notmuch--set :date_relative (match-string 2 str))
                    (consult-notmuch--set :tags (split-string (match-string 3 str))))
@@ -427,7 +427,7 @@ The package's elisp code is tangled from [[https://codeberg.org/jao/consult-notm
                  (auths (string-trim (nth 1 (split-string mid "[];]"))))
                  (subject (string-trim (nth 1 (split-string mid "[;]"))))
                  (headers (list :Subject subject :From auths))
-                 (t0 (string-match "([^)]+)\\s-*$" mid))
+                 (t0 (string-match "([^)]*)\\s-*$" mid))
                  (tags (split-string (substring mid (1+  t0) -1)))
                  (msg (list :id thread-id
                             :match t
