Fix: close preview buffers on exit
Thanks to @keamidon, see issue #8.

--- a/readme.org
+++ b/readme.org
@@ -462,10 +462,15 @@ The package's elisp code is tangled from [[https://codeberg.org/jao/consult-notm
 
         (defun consult-notmuch--preview (action candidate)
           "Preview CANDIDATE when ACTION is 'preview."
-          (when (eq action 'preview)
-            (when-let ((thread-id (consult-notmuch--thread-id candidate)))
-              (notmuch-show thread-id nil nil nil
-                            consult-notmuch--buffer-name))))
+          (cond ((eq action 'preview)
+                 (when-let ((thread-id (consult-notmuch--thread-id candidate)))
+                   (when (get-buffer consult-notmuch--buffer-name)
+                     (kill-buffer consult-notmuch--buffer-name))
+                   (notmuch-show thread-id nil nil nil
+                                 consult-notmuch--buffer-name)))
+                ((eq action 'exit)
+                 (when (get-buffer consult-notmuch--buffer-name)
+                   (kill-buffer consult-notmuch--buffer-name)))))
 
       #+end_src
 
