previous change done in literate code

--- a/readme.org
+++ b/readme.org
@@ -127,7 +127,7 @@ The package's elisp code is tangled from [[https://codeberg.org/jao/consult-notm
     #+begin_src emacs-lisp :noweb-ref public-functions
       (defun consult-notmuch--address-command (input)
         "Spec for an async command querying a notmuch address with INPUT."
-        `("notmuch" "address" "--format=text" ,input))
+        `(,notmuch-command "address" "--format=text" ,input))
 
       (defun consult-notmuch-address-compose (address)
         "Compose an email to a given ADDRESS."
@@ -264,8 +264,8 @@ The package's elisp code is tangled from [[https://codeberg.org/jao/consult-notm
       (defun consult-notmuch--command (input)
         "Construct a search command for emails containing INPUT."
         (if consult-notmuch-show-single-message
-            `("notmuch" "show" "--body=false" ,input)
-          `("notmuch" "search" ,input)))
+            `(,notmuch-command "show" "--body=false" ,input)
+          `(,notmuch-command "search" ,input)))
 
       (defun consult-notmuch--search (&optional initial)
         "Perform an asynchronous notmuch search via `consult--read'.
