--- a/readme.org
+++ b/readme.org
@@ -668,7 +668,7 @@ The package's elisp code is tangled from [[https://codeberg.org/jao/consult-notm
 
     #+begin_src emacs-lisp :noweb-ref package-boilerplate
 
-      ;; Copyright (C) 2021, 2022  Jose A Ortega Ruiz
+      ;; Copyright (C) 2021, 2022, 2024  Jose A Ortega Ruiz
 
       ;; This program is free software; you can redistribute it and/or modify
       ;; it under the terms of the GNU General Public License as published by
