new consult--async API: consult--process-collection

--- a/readme.org
+++ b/readme.org
@@ -140,9 +140,8 @@ The package's elisp code is tangled from [[https://codeberg.org/jao/consult-notm
 
       (defun consult-notmuch--address-prompt ()
         (consult--read (consult--async-pipeline
-                        (consult--async-min-input)
-                        (consult--async-throttle)
-                        (consult--async-process #'consult-notmuch--address-command))
+                        (consult--process-collection
+                         #'consult-notmuch--address-command))
                        :prompt "Notmuch addresses: "
                        :sort nil
                        :category 'notmuch-address))
@@ -301,9 +300,9 @@ The package's elisp code is tangled from [[https://codeberg.org/jao/consult-notm
       If given, use INITIAL as the starting point of the query."
         (setq consult-notmuch--partial-parse nil)
         (consult--read (consult--async-pipeline
-                        (consult--async-min-input consult-notmuch-min-input)
-                        (consult--async-throttle)
-                        (consult--async-process #'consult-notmuch--command)
+                        (consult--process-collection #'consult-notmuch--command
+                                                     :min-input
+                                                     consult-notmuch-min-input)
                         (consult--async-map #'consult-notmuch--transformer)
                         (consult--async-filter #'identity))
                        :prompt "Notmuch search: "
